<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:weightSum="1"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textStyle="bold" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombre2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="0.21" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nacimiento2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFecha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTelefono2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCorreo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescrip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/tvEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"/>

</LinearLayout>